<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/headingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">
            <ImageButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:layout_centerVertical="true"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:padding="@dimen/dp_5"
                android:contentDescription="@string/cross_button_description"/>
            <TextView
                android:id="@+id/signupHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_24"
                android:layout_toLeftOf="@id/cancelButton"
                android:layout_toStartOf="@id/cancelButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#fff"
                android:text="@string/welcome"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/signupSubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="#f2e8e8"
                android:layout_toLeftOf="@id/cancelButton"
                android:layout_toStartOf="@id/cancelButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/signupHeading"
                android:text="@string/sign_up_tag_line"/>
        </RelativeLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:textColorHint="#f2e8e8"
            android:layout_below="@id/headingLayout">
            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="#fff"
                android:textSize="@dimen/sp_16"
                android:maxLines="1"
                android:inputType="text"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#f2e8e8"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_below="@id/inputLayoutFirstName">
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="#fff"
                android:textSize="@dimen/sp_16"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#f2e8e8"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_below="@id/inputLayoutLastName">
            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="#fff"
                android:textSize="@dimen/sp_16"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#f2e8e8"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_below="@id/inputLayoutPhoneNumber">
            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:textColor="#fff"
                android:textSize="@dimen/sp_16"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#f2e8e8"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_below="@+id/inputLayoutEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLines="1"
                android:textColor="#fff"
                android:textSize="@dimen/sp_16"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"/>
        </android.support.design.widget.TextInputLayout>




        <RelativeLayout
            android:id="@+id/policyNConditionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/inputLayoutPassword">

            <CheckBox
                android:id="@+id/termsConditionBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/agreeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_text"
                android:textColor="#fff"
                android:layout_toRightOf="@id/termsConditionBox"
                android:paddingTop="5dp"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/policyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/agreeText"
                android:text="@string/privacy_policy"
                android:textColor="@drawable/terms_policies_selector"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/andTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_toRightOf="@id/termsConditionBox"
                android:layout_below="@id/agreeText"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/termsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:layout_toRightOf="@id/andTV"
                android:layout_below="@id/agreeText"
                android:textColor="@drawable/terms_policies_selector"
                android:textSize="16sp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:background="@mipmap/btn"
            android:textColor="#fff"
            android:textSize="@dimen/sp_18"
            tools:targetApi="lollipop"
            android:paddingBottom="@dimen/dp_8"
            android:contentDescription="@string/sign_up_button_description"
            android:layout_below="@+id/policyNConditionsLayout"
            android:layout_centerHorizontal="true" />


        <LinearLayout
            android:id="@+id/signInViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpButton"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="@dimen/sp_16"
                android:textColor="#8b8a8a"
                android:padding="@dimen/dp_5"
                android:gravity="center"/>
            <TextView
                android:id="@+id/signupLoginView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/sp_16"
                android:textColor="#fff"
                android:textStyle="bold"
                android:padding="@dimen/dp_5"
                android:gravity="center"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>